package factorymethod;

public interface Transport {
    void deliver();
}